--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Jiawei Cao",
   "license": "ISC",
   "dependencies": {
+    "highlight.js": "^9.12.0",
     "reveal.js": "^3.5.0",
     "sequencejs": "^2.0.0"
   },
