--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "highlight.js": "^9.12.0",
-    "reveal.js": "^3.5.0",
-    "sequencejs": "^2.0.0"
+    "reveal.js": "^3.5.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0"
   }
